--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "ajith,ck,ayyappen",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "request": "^2.88.2"
   }
 }
