--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
+    "firebase-admin": "^12.1.0",
     "request": "^2.88.2"
   }
 }
